--- a/src/style.css
+++ b/src/style.css
@@ -116,3 +116,79 @@ main {
 }
 
 /* Aqui comenzamos */
+body {
+    min-height: 80vh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.puntaje {
+    font-size: 24px;
+    font-weight: 200;
+    color: #e30451;
+    align-self: flex-start;
+    padding-left: 100px;
+    margin: 0 0 100px;
+}
+main {
+    background-color: #1e1e1e;
+    padding: 10px;
+    width: 50%;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    border-radius: 4px;
+    box-shadow: 0 0 15px #080808;
+    min-height: 400px;
+}
+h2,
+h3 {
+    width: 100%;
+    text-align: center;
+    margin: 15px;
+}
+h2 {
+    font-size: 30px;
+    font-weight: 500;
+}
+h3 {
+    font-size: 14px;
+    font-weight: 300;
+}
+form {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
+input {
+    border: 1px solid #323232;
+    padding: 10px;
+    border-radius: 4px;
+    width: 60%;
+    margin-bottom: 20px;
+}
+button {
+    border-radius: 4px;
+    margin-bottom: 20px;
+    padding: 10px 15px;
+}
+button:hover {
+    box-shadow: 0 0 10px black;
+}
+div {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    margin: 20px;
+    display: none;
+}
+div > span {
+    margin-bottom: 10px;
+}
