Promises cata nico (#3)
* Adicion de funcones

* incluir mensaje de éxito o fracaso

* rollback cambios del fetch

Co-authored-by: natpoveda <ndpoveda@gmail.com>
Co-authored-by: Nicolás M. Pardo <nicolasm@nikodermus.media>

--- a/src/style.css
+++ b/src/style.css
@@ -187,10 +187,14 @@ div {
     align-items: center;
     justify-content: center;
     margin: 20px;
-    display: none;
 }
 div > span {
     margin-bottom: 10px;
+}
+
+
+.disabled {
+    background-color: gray;
 }
 
 select {
@@ -202,3 +206,4 @@ select {
     color: white;
     margin-bottom: 20px;
  }
+
